# trader-cockpit-app

./: .coveragerc  .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  test_dhan_ws.py
MomentumScorerService/: Dockerfile  README.md  pyproject.toml
MomentumScorerService/src/: config.py  main.py
MomentumScorerService/src/api/: deps.py  routes.py
MomentumScorerService/src/db/: connection.py
MomentumScorerService/src/db/migrations/: 001_schema.sql  002_daily_scores.sql  003_comfort_score.sql  003_drop_comfort_score.sql  004_daily_scores_indicators.sql  005_stage.sql
MomentumScorerService/src/domain/: filters.py  models.py  unified_score_breakdown.py  watchlist_candidate.py
MomentumScorerService/src/repositories/: _score_reads.py  _score_reads_balanced.py  _score_writes.py  price_repository.py  score_repository.py
MomentumScorerService/src/services/: _score_compute.py  _score_watchlist.py  score_service.py
MomentumScorerService/src/signals/: _indicators_momentum.py  _indicators_trend.py  _indicators_volatility.py  _scorer_constants.py  _scorer_momentum.py  _scorer_structure.py  _scorer_trend.py  _scorer_volatility.py  _stage_detector.py  _watchlist_calc.py  indicators.py  momentum.py  scorer.py  unified_scorer.py  watchlist.py
MomentumScorerService/tests/: test_score_error_paths.py  test_score_service.py  test_scorer.py  test_scorer_components.py  test_unified_scorer.py  test_watchlist.py
backend/: Dockerfile  TraderCockpit.sln  pyproject.toml
backend/src/TraderCockpit.Api/: Program.cs  TraderCockpit.Api.csproj  appsettings.json
backend/src/TraderCockpit.Application/: TraderCockpit.Application.csproj
backend/src/TraderCockpit.Application/Common/: IUseCase.cs
backend/src/TraderCockpit.Domain/Common/: Entity.cs  IDomainEvent.cs
backend/src/TraderCockpit.Domain/Entities/: Trade.cs
backend/src/TraderCockpit.Domain/Events/: TradeClosedEvent.cs  TradeOpenedEvent.cs
backend/src/TraderCockpit.Domain/Repositories/: ITradeRepository.cs
backend/src/TraderCockpit.Infrastructure/: DependencyInjection.cs  TraderCockpit.Infrastructure.csproj
backend/src/TraderCockpit.MarketData/: DependencyInjection.cs  README.md  TraderCockpit.MarketData.csproj
backend/src/data/: symbols.csv
backend/src/trader_cockpit/: config.py
(+642 files in other folders)
