[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "momentum-scorer-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "asyncpg>=0.30",
    "pandas>=2.2",
    "numpy>=1.26",
    "ta>=0.11",
    "pydantic-settings>=2.6",
    "redis[asyncio]>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]
