[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trader-cockpit"
version = "0.1.0"
description = "Decision-first trading cockpit for NSE/BSE active traders via Dhan broker"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    # Dhan broker SDK
    "dhanhq>=2.0.2",

    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # Cache / Pub-Sub
    "redis[hiredis]>=5.0.0",

    # Async HTTP
    "httpx>=0.27.0",

    # WebSocket
    "websockets>=12.0",

    # Background scheduler
    "apscheduler>=3.10.0",

    # Auth
    "PyJWT>=2.8.0",
    "passlib[bcrypt]>=1.7.4",

    # Validation
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",

    # Retry logic
    "tenacity>=8.5.0",

    # Structured logging
    "structlog>=24.0.0",

    # Date/time utils
    "python-dateutil>=2.9.0",
    "pytz>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
    "factory-boy>=3.3.0",
    "freezegun>=1.5.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/trader_cockpit"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "ASYNC"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
